# locci

./: README.md
app/: jsconfig.json  package.json  vite.config.js
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/routes/: add-project.svelte  overview.svelte  projects.svelte
