[package]
name = "locci-app"
version = "1.0.0"
description = "Locci Desktop App - Built with Tauri"
authors = ["MikeTeddyOmondi"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.29.1", features = ["full"] }
prettytable-rs = "0.10.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bollard = { version = "0.16.1", features = [
    "json_data_content",
    "buildkit",
    "chrono",
] }
kube = { version = "0.92.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
